@@ -56,6 +56,7 @@
     <Compile Include="BaseClass\DrawableTriangle.cs" />
     <Compile Include="BaseClass\DrawableCircleContour.cs" />
     <Compile Include="BaseClass\DrawableCircle.cs" />
+    <Compile Include="GameContent\ChampionsInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
