@@ -1,5 +1,14 @@
 2013-04-30  Jesse  <>
 
+	* TestScreen.cs:
+	* GREATClient.Linux.csproj:
+	* GREATClient.Windows.csproj:
+	* ChampionsInfo.cs:
+	* DrawableTileMap.cs:
+	* DrawableChampion.cs: 
+
+2013-04-30  Jesse  <>
+
 	* TestScreen.cs: 
 
 2013-04-18  The Parasithe  <bipbip500@hotmail.com>
